After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 680667 - vp8enc: initiate encoder to fix a crash.
vp8enc: initiate encoder to fix a crash.
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 0.11.x
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-07-26 17:37 UTC by Oleksij Rempel
Modified: 2012-08-05 18:37 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch (1.00 KB, patch)
2012-07-26 17:37 UTC, Oleksij Rempel
committed Details | Review

Description Oleksij Rempel 2012-07-26 17:37:53 UTC
Created attachment 219706 [details] [review]
patch

Without this patch vp8enc send header before and after first
key frame. On second header vp8dec will crash without getting
decoded frame. With this pipe it is easy to reproduce this issue:
gst-launch-1.0 videotestsrc ! vp8enc ! vp8dec ! fakesink
Comment 1 Tim-Philipp Müller 2012-08-05 18:37:12 UTC
Pushed, thanks!

commit 94337d05a503aafc403fdaecff2192e11249c94f
Author: Oleksij Rempel <bug-track@fisher-privat.net>
Date:   Thu Jul 26 19:31:14 2012 +0200

    vp8enc: initiate encoder to fix a crash.
    
    Without this patch vp8enc send header before and after first
    key frame. On second keyframe vp8dec will crash without getting
    decoded frame. With this pipe it is easy to reproduce this issue:
    gst-launch-1.0 videotestsrc ! vp8enc ! vp8dec ! fakesink
    
    https://bugzilla.gnome.org/show_bug.cgi?id=680667